# funasr-server

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  integration.yml
src/funasr_server/: __init__.py  client.py  installer.py  mirror.py  models.py
src/funasr_server/runtime_template/: pyproject.toml  server.py
tests/: test_client.py  test_installer.py  test_integration.py  test_mirror.py  test_models.py  test_server.py
