[project]
name = "funasr-server-runtime"
version = "0.1.0"
requires-python = ">=3.10,<3.13"
dependencies = [
    "funasr>=1.3.0",
    "modelscope",
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "uvicorn>=0.30.0",
    "starlette>=0.37.0",
]

[tool.uv]
# Automatically detect GPU and install the right torch variant:
# - NVIDIA GPU -> CUDA build
# - Mac -> MPS build (default from PyPI)
# - No GPU -> CPU build
torch-backend = "auto"
